# cp2077-mac-mods

./: .beans.yml  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.beans/: cp2077-mac-mods-09cm--verify-redscript-pipeline-runtime-execution-on-mac.md  cp2077-mac-mods-4paj--re-why-redscriptshost-isnt-reached-on-macos.md  cp2077-mac-mods-hf49--test-fa-001-fix-re-sign-game-with-allow-unsigned-e.md  cp2077-mac-mods-hxyb--map-redscripts-gameplay-delivery-reach-on-macos-v1.md  cp2077-mac-mods-pyri--make-redscript-reach-gameplay-on-macos-phase-5-hoo.md  cp2077-mac-mods-q90k--verify-redscript-bytecode-actually-executes-on-mac.md  cp2077-mac-mods-vdj3--test-real-windows-mod-set-against-macos-port-state.md
.openclaw/: config.yaml  routing.yaml
.openclaw/agents/: doc-keeper.md  hook-engineer.md  lead.md  mod-loader.md  researcher.md  reviewer.md  tester.md  tweakdb-engineer.md
docs/: ARCHITECTURE.md  BUILD.md  CINEMA_DEMO_FLATS.md  DECISIONS.md  FACTS.md  FAILED_APPROACHES.md  HANDOFF.md  HYPOTHESES.md  PHASE_1_PLAN.md  PHASE_2_PLAN.md  ROADMAP.md
docs/guides/: live-edit.md
docs/probes/: h001-probe.md
docs/reference/: arm64-hooking.md  macos-codesigning.md  tweakdb-binary-format.md  windows-tweakxl-api.md
reference/: README.md  example-mods  ghidra  windows-tweakxl
reference/tweakxl-data/: record_names.txt
src/red4ext-mac/: CMakeLists.txt
src/red4ext-mac/probes/: CMakeLists.txt
src/red4ext-mac/src/loader/: Loader.cpp
src/red4ext-mac/src/probes/: h001_probe.cpp  h004_probe.cpp
src/red4ext-mac/src/runtime/: ApplyTrigger.cpp  ApplyTrigger.hpp  HashMap.cpp  HashMap.hpp  LiveEditParse.hpp  SingletonAccess.cpp  SingletonAccess.hpp  Symbols.cpp  Symbols.hpp  TweakDB.cpp  TweakDB.hpp  Values.hpp  apply_trigger_test.cpp  hashmap_test.cpp  liveedit_parse_test.cpp  slide_test.cpp  tweakdb_test.cpp
src/tweakxl-mac/: CMakeLists.txt
src/tweakxl-mac/src/applicator/: Applicator.cpp  Applicator.hpp  applicator_test.cpp
src/tweakxl-mac/src/loader/: ModScanner.cpp  ModScanner.hpp  scanner_test.cpp
src/tweakxl-mac/src/model/: Operation.hpp
src/tweakxl-mac/src/parsers/: PsiberxParser.cpp  Tweak.cpp  Tweak.hpp  TweakInternal.hpp  YAML.cpp  YAML.hpp  yaml_test.cpp
src/tweakxl-mac/src/plugin/: Plugin.cpp
state/: session-log.md  status.yaml  tasks.yaml
tools/: run-h001-probe.sh  run-h004-probe.sh  test-applicator.sh  test-apply-trigger.sh  test-candidate-probe.sh  test-cinema-bulk.sh  test-cinema-scan.sh  test-cinema-unleash.sh  test-cinema.sh  test-hashmap-lookup.sh  test-singleton-access.sh  test-slide-capture.sh  test-tweak-parser.sh  test-tweakdb-access.sh  test-tweakxl-e2e.sh  test-value-rw.sh  test-yaml-parser.sh
tools/ghidra/: PrintHash.py  bh-1.py  bh-2.py  bh-3.py  bh-4.py  bh-5.py  bh-6.py  dec_assign.py  dec_assign2.py  dec_ur.py  dec_ur2.py  dec_ur3.py  dec_ur4.py  eng-1-survey.py  eng-10-308x10.py  eng-11-singleton.py  eng-12-instroot.py  eng-13-init.py  eng-14-trace.py  eng-15-statsds.py  eng-16-fwglobal.py  eng-17-cand.py  eng-18-id.py  eng-19-final.py  eng-2-find308.py  eng-20-vtoff.py  eng-3-chain.py  eng-4-anchors.py  eng-5-dec.py  eng-6-callers.py  eng-7-getsys.py  eng-8-ginst.py  eng-9-root.py  pl-storage.py  re-1-xref.py  re-10-statcore.py  re-11-cachepop.py  re-12-insert.py  re-13-base.py  re-14-seed.py  (+28 more)
tools/probes/: boost_flats.txt  candidate_flats.txt  memory_modifier_records.txt  price_records.txt  stat_candidate_flats.txt
